# hello_triangle

./: .gitignore  CMakeLists.txt  build.sh  run.sh
src/: main.cpp
